[gd_scene load_steps=5 format=3 uid="uid://dehqiuoqmmh3m"]

[ext_resource type="Script" uid="uid://c0buxx76v4ii1" path="res://scenes/game_ricochet_robot/ricochet_robot_ui.gd" id="1_vn41w"]
[ext_resource type="PackedScene" uid="uid://dyxfh7q1k5qa2" path="res://scenes/game_ricochet_robot/ricochet_robot_board.tscn" id="2_iixg3"]
[ext_resource type="AudioStream" uid="uid://b13ega2kvv5j7" path="res://resources/audio/sfx/game_ricochet_robot/sfx_game_ricochet_robot_select_robot.wav" id="3_ww0ip"]
[ext_resource type="AudioStream" uid="uid://bosucsx0pg84e" path="res://resources/audio/sfx/game_ricochet_robot/sfx_game_ricochet_robot_move.wav" id="4_dorgm"]

[node name="RicochetRobotUI" type="Node2D"]
script = ExtResource("1_vn41w")

[node name="RicochetRobotBoard" parent="." instance=ExtResource("2_iixg3")]

[node name="select_robot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ww0ip")
bus = &"SFX"

[node name="move_robot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dorgm")
bus = &"SFX"

[connection signal="deliver_disable_input" from="." to="RicochetRobotBoard" method="receive_disable_input"]
[connection signal="request_generate_goal_to_board" from="." to="RicochetRobotBoard" method="receive_request_generate_goal"]
[connection signal="request_generate_robots_to_board" from="." to="RicochetRobotBoard" method="receive_request_generate_robots"]
[connection signal="request_generate_wall_to_board" from="." to="RicochetRobotBoard" method="receive_request_generate_wall"]
[connection signal="request_move_robot_to_board" from="." to="RicochetRobotBoard" method="receive_move_robot"]
[connection signal="request_reset_ui_to_board" from="." to="RicochetRobotBoard" method="receive_request_reset_ui"]
[connection signal="move_finished" from="RicochetRobotBoard" to="." method="receive_move_finished"]
[connection signal="request_cell_pressed_to_ui" from="RicochetRobotBoard" to="." method="receive_request_cell_pressed_to_ui"]
